# OpenXBLPython

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pre_push.py  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
src/open_xbl/: xbox_live.py
src/open_xbl/utils/: endpoints.py
src/open_xbl_python/: open_xbl.py
src/open_xbl_python/core/: request_builder.py
src/open_xbl_python/models/: client.py  open_xbl_base.py  user.py  xbox_account.py
src/open_xbl_python/utils/: endpoints.py  misc.py
