[metadata]
name = OpenXBLPython
version = 2022.02.27
author = DIO Brando (@isFakeAccount)
author_email = trevorphillips@gmx.us
url = https://github.com/isFakeAccount/OpenXBLPython
description = Asynchronous Python API Wrapper for Open XBL
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
platform = any
keywords = xbox, api, asynchronous, websockets, aiohttp
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/isFakeAccount/OpenXBLPython/issues
    Changelog = https://github.com/isFakeAccount/OpenXBLPython/blob/master/CHANGELOG.md
    Source Code = https://github.com/isFakeAccount/OpenXBLPython

[options]
include_package_data = true
package_dir =
    =src
packages = find:
test_suite = tests
install_requires =
    aiohttp~=3.8
setup_requires =
    setuptools
python_requires = >= 3.7

[options.packages.find]
where = src

[options.extras_require]
testing =
    flake8==4.0.1
    mypy==0.931
    pytest==7.0.1
    tox==3.24.5
    vcrpy==4.1.1
    python-dotenv==0.19.2

[options.package_data]
open_xbl = py.typed